# ytdlp-desktop

./: .gitignore  README.md  main.py  pyproject.toml
src/ytdlp_desktop/: __main__.py
