[project]
name = "ytdlp-desktop"
version = "0.1.0"
description = "Simple GUI for yt-dlp"
dependencies = ["flet>=0.20.2", "static-ffmpeg>=2.5", "yt-dlp"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["nuitka>=2.0.5"]

[tool.rye.scripts]
exe = "nuitka3 --onefile main.py"
exe-win = "nuitka.bat --onefile main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ytdlp_desktop"]
